--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </table>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.3"></script>
 </body>
 </html>
