--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-			 background-image: url("https://i-blog.csdnimg.cn/blog_migrate/1db0643ebaee70d86bbdbc5c0704c069.png");
+			 background-image: url(https://i.ibb.co/GvHYx2hb/20250801165830.png);
              background-repeat: no-repeat; /* 防止图片重复 */
              background-size: cover; /* 填充整个页面 */
         }
